tests/snapshots/js_icu__js_icu_nested_in_t.snap
---
source: tests/js_icu.rs
---
import { t, selectOrdinal } from '@lingui/macro'

t`This is my ${selectOrdinal(count, {
  one: "st",
  two: "nd",
  other: "rd"
})} cat`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
$_i18n._(/*i18n*/ {
    id: "LF3Ndn",
    message: "This is my {count, selectordinal, one {st} two {nd} other {rd}} cat",
    values: {
        count: count
    }
});
